--- a/resume/index.html
+++ b/resume/index.html
@@ -25,11 +25,11 @@
                     <td>
                         <span>
                             邮件：
-                            <a href="mailto:me@lenage.com">me[AT]lenage.com</a>
+                            <a href="mailto:me@lenage.com">lendage@gmail.com</a>
                         </span>
                         <span>
                             电话：
-                            <a href="tel:18684879976">(+86) 186-8487-9976</a>
+                            <a href="tel:18684879976">(+86) 195-2132-2506</a>
                         </span>
                     </td>
                 </tr>
@@ -42,16 +42,17 @@
                 <tr>
                     <td>职业技能</td>
                     <td>
-                        <ul class="skills">
-                            <li>5 年技术团队管理经验，团队规模最大时达到 62 人</li>
-                            <li>5 年+ Backend 架构经验，熟悉常见的后端架构设计</li>
-                            <li>5 年+ 微服务实践经验，熟悉 kubernetes、Envoy</li>
-                            <li>4 年+ Golang 经验，连续 2 届 GopherChina 讲师</li>
-                            <li>6 年 Ruby 经验， 3 年 E-Commerce 经验</li>
-                            <li>5 年+ 教育产品开发经验</li>
-                            <li>3 年前端经验，熟悉 React</li>
-                            <li>熟悉 AWS 云产品</li>
-                        </ul>
+                      <ul class="skills">
+                        <li>10 年互联网从业经验</li>
+                        <li>5 年技术团队管理经验，团队规模最大时达到 62 人</li>
+                        <li>5 年+ Backend 架构经验，熟悉常见的后端架构设计</li>
+                        <li>5 年+ 微服务实践经验，熟悉 kubernetes、Envoy</li>
+                        <li>4 年+ Golang 经验，连续 2 届 GopherChina 讲师</li>
+                        <li>6 年 Ruby 经验， 3 年 E-Commerce 经验</li>
+                        <li>5 年+ 教育产品开发经验</li>
+                        <li>3 年前端经验，熟悉 React</li>
+                        <li>熟悉 AWS 云产品</li>
+                      </ul>
                     </td>
                 </tr>
                 <tr>
@@ -62,11 +63,11 @@
                 </tr>
                 <tr>
                     <td>教育背景</td>
-                    <td>天津工业大学（2010 级本科，通信工程）</td>
+                    <td>天津工业大学（2010 年毕业，通信工程）</td>
                 </tr>
                 <tr>
                     <td>英语</td>
-                    <td>熟练阅读文档； 作为工作语言使用 4+ 年。</td>
+                    <td>熟练阅读文档； 作为工作语言使用 4+ 年</td>
                 </tr>
             </table>
         </div>
@@ -130,16 +131,10 @@
                       英语流利说
                         <span class="title">流利说®英语 技术负责人</span>
                         <span class="team-size"> (团队规模：52-62 人)</span>
-                        <span class="date">2020/02 - 2020/06</span>
+                        <span class="date">2020/02 - 至今</span>
                     </h3>
                     <p>
-                      2020 年 2 月，担任流利说®英语（公司最大的业务线）技术负责人，团队规模超 50 人，其中客户端各端分别  10+，后端 18+。主要工作:
-                      <ul>
-                        <li>制定 LLSAPP 技术规划</li>
-                        <li>依组织架构调整合并业务</li>
-                        <li>改进版本迭代方式，提高开发效率</li>
-                        <li>推进处理遗留技术债</li>
-                      </ul>
+                      2020 年 2 月，担任流利说®英语（公司最大的业务线）技术负责人，团队规模超 50 人，其中客户端各端分别  10+，后端 18+，主要负责团队管理和技术方向规划工作。
                     </p>
                 </li>
                 <li>
@@ -154,42 +149,24 @@
                     <ul>
                         <li>梳理业务，确定 Platform 4 条业务主线，明确长期 Platform 业务规划</li>
                         <li>确定 Platform 技术选型和架构演进，持续改进 Platform 基础服务</li>
-                        <li>探索 DMP 项目，构建用户画像和触达体系，完成链路闭环</li>
-                        <li>完善人才梯队</li>
+                        <li>推动 DMP 项目，构建用户画像和触达体系，完成链路闭环</li>
                     </ul>
                     </div>
                 </li>
                 <li>
                     <h3>
                       <span>英语流利说</span>
-                        <span class="title">Platform Tech Lead</span>
-                        <span class="team-size"> (团队规模：15-35 人)</span>
-                        <span class="date">2018/03 - 2019/06</span>
-                    </h3>
-                    <div>
-                      <p>18 年初公司 re-org 之后，基础服务（CMS、支付、用户账户、学习数据系统）独立出来由 Platform 负责，作为 Tech Lead，主要负责:</p>
-                      <ul>
-                        <li>把握 Platform 基础服务技术方向</li>
-                        <li>抽象学习基础服务，赋能业务</li>
-                        <li>推动后端微服务架构演进，引入 envoy 解决 HTTP/2 LB 问题</li>
-                        <li>招聘和日常团队建设工作</li>
-                      </ul>
-                    </div>
-                </li>
-                <li>
-                    <h3>
-                      <span>英语流利说</span>
-                      <span class="title">开发组长</span>
-                      <span class="team-size"> (团队规模：5-15 人)</span>
-                      <span class="date">2016/09 - 2018/03</span>
+                      <span class="title"> 开发组长、Platform Tech Lead </span>
+                      <span class="team-size"> (团队规模：5-35 人)</span>
+                      <span class="date">2016/09 - 2019/03</span>
                     </h3>
                     <div>
                       <span>主要贡献</span>
                     <ul>
-                        <li>设计实现文本标记语言 CourseScript，提高内容生产效率 5 倍以上。</li>
-                        <li>推动流利说技术栈从 Ruby 转换为 Golang，以提供更稳定线上服务。</li>
-                        <li>参与达尔文英语 （懂你英语进化版）架构设计和前期开发</li>
-                        <li>流利说基础服务搭建，与团队一起设计实现用户账户系统、订单支付系统、内容管理系统，完善基建。</li>
+                        <li>设计实现文本标记语言 CourseScript，提高内容生产效率 5 倍以上</li>
+                        <li>推动流利说技术栈从 Ruby 转换为 Golang，以提供更稳定线上服务</li>
+                        <li>参与达尔文英语 （懂你英语进化版）架构设计</li>
+                        <li>完善基建，设计实现用户账户系统、订单支付系统、内容管理系统等</li>
                     </ul>
                     </div>
                     <ul class="projects">
@@ -199,13 +176,13 @@
                               打通多业务线用户账户体系，提供简单、易用、安全、高效的用户注册登录查询服务。主要亮点:
                                 <ol>
                                     <li>
-                                        <b>认证与登录注册分离</b>： 使用 JWT 认证，用户认证和登录注册读写分离，极大的提高了服务的稳定性。
+                                        <b>认证与登录注册分离</b>： 使用 JWT 认证，用户认证和登录注册读写分离，极大的提高了服务的稳定性
                                     </li>
                                     <li>
-                                        <b>envoy 接入层认证</b>： 利用 envoy HTTP Auth Filter 实现接入层请求认证，方便 upstream 服务接入。
+                                        <b>envoy 接入层认证</b>： 利用 envoy HTTP Auth Filter 实现接入层请求认证，方便 upstream 服务接入
                                     </li>
                                     <li>
-                                        <b>自定义登录注册流程</b>： 提供自定义 AuthFlow, 支持不同业务线灵活配置。
+                                        <b>自定义登录注册流程</b>： 提供自定义 AuthFlow, 支持不同业务线灵活配置
                                     </li>
                                 </ol>
                             </div>
@@ -217,18 +194,11 @@
                                 <ol>
                                     <li>
                                         <b>设计实现课程描述语言 - CourseScript </b>
-                                        ：根据教研使用的课程格式，设计课程描述语言 CourseScript, 并配套基于 Atom 的 Preview 工具，使教研可以离线编写、检查、校验 course 文件，统一工作流程，提高内容质量和生产效率。
-
-                                    </li>
-                                    <li>
-                                        <b>Audio/Video 自动切割拼接</b>
-                                        ：英语教学中需要切割/拼接需要 Audio/Video 文件，我们利用解析字幕的处理音视频，并对接算法生成打分模型，减少教研前置音视频处理时间。
-
+                                        ：根据教研使用的课程格式，设计课程描述语言 CourseScript, 并配套基于 Atom 的 Preview 工具，使教研可以离线编写、检查、校验 course 文件，统一工作流程，提高内容质量和生产效率
                                     </li>
                                     <li>
                                         <b>灵活支持多种题型</b>
-                                        ：针对 100 多种题型灵活处理，新题型开发时间从最初的 2 天减少到 3 个小时。
-
+                                        ：针对 100 多种题型灵活处理，新题型开发时间从最初的 2 天减少到 3 个小时
                                     </li>
                                 </ol>
                             </div>
@@ -257,30 +227,20 @@
                                 <ol>
                                     <li>
                                         <b>懂你英语用户学习流程</b>
-                                        ： 为方便系统解藕，较早尝试 Ruby RPC 方案，拆解业务逻辑。
+                                        ： 为方便系统解藕，较早尝试 Ruby RPC 方案，拆解业务逻辑
 
                                     </li>
                                     <li>
                                         <b>CMS（内容管理系统）</b>
-                                        ： 教育产品内容管理系统是整个环节中最为复杂的部分，设计、讨论、实现了大部分的功能。
+                                        ： 教育产品内容管理系统是整个环节中最为复杂的部分，设计、讨论、实现了大部分的功能
 
                                     </li>
                                     <li>
                                         <b>系统优化</b>
-                                        ： 跟进线上问题，并优化 Ruby 常见的内存泄漏和慢请求的问题。
+                                        ： 跟进线上问题，并优化 Ruby 常见的内存泄漏和慢请求的问题
 
                                     </li>
                                 </ol>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h4>
-                              <span>萌翻日语 核心开发者</span>
-                                <span class="date">2015/01 - 2015/05</span>
-                            </h4>
-                            <div class="detail">
-                                <p>萌番日语为流利说推出的日语一对一直播授课平台，使用 Ruby On Rails 实现，集成直播(使用第三方 SDK)、订单、支付、教师管理、课程预约等功能。整个项目由我单人负责前后端开发，从立项到上线共耗时 4 个月。其中产出的部分基础功能封装（支付、直播）在后续的项目中广泛使用。</p>
                             </div>
                         </li>
                     </ul>
@@ -315,7 +275,7 @@
                                     <li>
                                         <b>TEAM LACOSTE</b>
                                         ： LACOSTE 的会员管理系统，用户在实体店消费扫描会员二维码来累积消费积分，并管理自己标记/购买过的店铺。
-                                                                我的主要工作是迁移 TEAM LACOSTE 到 LACOSTE EC (之前由另外一家公司管理)，重新实现 (Ruby) 所有前端feature和后台管理功能，
+                                                                主要工作是迁移 TEAM LACOSTE 到 LACOSTE EC (之前由另外一家公司管理)，重新实现 (Ruby) 所有前端feature和后台管理功能，
                                                                 并完成大部分的前端工作 (仅支持 SmartPhone, 使用 jQuery mobile)，积累了 SmartPhone 前端开发经验。
 
                                     </li>
@@ -329,23 +289,12 @@
                         </li>
                         <li>
                             <h4>
-                              <span>ASICS 欧洲 Redesign</span>
-                                <a href="http://www.asics.de/"> http://www.asics.co.uk </a>
-                                <span class="date">2012/02 - 2012/08</span>
-                            </h4>
-                            <div class="detail">
-                              <p>ASICS 3.0 (Redesin)，作为主要开发人员 (共 2~3 人)，在之前 ASICS 2.0 的基础上完成大部分后端工作和前端部分工作，并与客户、设计公司良好沟通，
-                                                在 5 周内上线主要的 10 国家，7 周内上线所有 32 个国家。</p>
-                            </div>
-                        </li>
-                        <li>
-                            <h4>
                               <span>ASICS 欧洲<span>
                               <a href="http://www.asics.de/"> http://www.asics.de </a>
-                              <span class="date">2011/06 - 2011/12</span>
+                              <span class="date">2011/06 - 2012/08</span>
                             </h4>
                             <div class="detail">
-                              ASICS 是世界知名的运动品牌，ASICS 2.0 是我加入公司的第一个项目，主要负责前端工作和少量的后端开发工作。
+                              ASICS 是世界知名的运动品牌，主要负责前端工作和后端开发工作。
                               ASICS 2.0 是为 ASICS 欧洲量身定制的内容管理系统，支持 32 个国家 (域名) 和 35 种语言的产品和内容管理。
                             </div>
                         </li>
@@ -354,7 +303,6 @@
                 </li>
             </ol>
         </div>
-        <div class="section"><h2></h2></div>
     </div>
 </body>
 </html>
